--- a/package.json
+++ b/package.json
@@ -1,17 +1,27 @@
 {
-  "name": "noatblog-theme",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
+	"name": "noatblog-theme",
+	"version": "0.0.1",
+	"type": "module",
+	"scripts": {
     "start": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "@types/node": "^22.7.0",
-    "node-html-parser": "^6.1.13",
-    "sass-embedded": "^1.79.3",
-    "vite": "^5.4.1"
-  }
+		"build": "vite build",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"preact": "^10.25.3",
+		"preact-iso": "^2.8.1"
+	},
+	"devDependencies": {
+		"@preact/preset-vite": "^2.9.3",
+		"@types/node": "^22.10.10",
+		"eslint": "^8.57.1",
+		"eslint-config-preact": "^1.5.0",
+		"node-html-parser": "^7.0.1",
+		"sass-embedded": "^1.83.4",
+		"typescript": "^5.7.3",
+		"vite": "^6.0.4"
+	},
+	"eslintConfig": {
+		"extends": "preact"
+	}
 }
